# SimplePythonTemplate

./: .editorconfig  .gitlint  .pre-commit-config.yaml  .yamllint.yaml  LICENSE  README.md  SECURITY.md  justfile  pyproject.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
app/: main.py
tests/unit/: test_main.py
