[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "DonAsako", email = "asako@donasako.fr" }]
requires-python = ">=3.13"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.13.4",
]

[project.urls]
Homepage   = "https://donasako.fr/"
Repository = "https://github.com/DonAsako/python-project-template"
Issues     = "https://github.com/DonAsako/python-project-template/issues"

[project.scripts]
app-cli = "app.main:main"

[dependency-groups]
dev = [
    # Linters / type-checkers / formatters
    "mypy",
    "ruff",
    "yamllint",
    "mdformat",
    "gitlint",
    "pre-commit>=4.6.0",
    # Tests
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-benchmark",
    "pytest-xdist",
    "pytest-asyncio",
    "pytest-timeout",
    "pytest-dotenv",
    # Type stubs
    "types-requests",
    "types-jsonschema",
]

# ============================================================================
# HATCH (build backend)
# ============================================================================

[tool.hatch.build.targets.sdist]
include = ["app"]

[tool.hatch.build.targets.wheel]
include = ["app"]

# ============================================================================
# RUFF (linter + formatter)
# https://docs.astral.sh/ruff/
# ============================================================================

[tool.ruff]
line-length    = 120
target-version = "py313"
exclude        = [".venv", "uv.lock", "__pycache__", "pyproject.toml"]

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
task-tags = ["TODO"]
unfixable = ["F841"]
ignore = [
    # ---- Style / preference ----
    "UP015",  # redundant-open-modes
    "E501",   # line-too-long (handled by the formatter)
    "PYI041", # redundant-numeric-union
    "SIM103", # needless-bool
    "SIM108", # if-else-block-instead-of-if-exp
    "SIM110", # reimplemented-builtin
    "TD003",  # missing-todo-link
    # ---- Formatter conflicts (https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules) ----
    "COM812", # missing-trailing-comma
    "ISC001", # single-line-implicit-string-concatenation
    # ---- Logging ----
    "G003", # logging-string-concat
    "G004", # logging-f-string
    # ---- Bandit (relaxed for a CTF project) ----
    "S311", # suspicious-non-cryptographic-random
    "S101", # assert
    # ---- Performance (often noisy) ----
    "PERF401", # manual-list-comprehension
    "PERF403", # manual-dict-comprehension
    # ---- Pylint magic values ----
    "PLR2004", # magic-value-comparison
    # ---- Async ----
    "ASYNC109", # async-function-with-timeout
    # ---- Tryceratops ----
    "TRY002", # raise-vanilla-class
    "TRY003", # raise-vanilla-args
    "TRY300", # try-consider-else
    "TRY301", # raise-within-try
    # ---- pep8-naming (external interfaces / Pydantic) ----
    "N802",
    "N803",
    "N805",
    "N806",
    "N812",
    "N815",
]
select = [
    ## All available rules: https://docs.astral.sh/ruff/rules/
    ## Comment / uncomment but do not remove, to keep the full inventory visible

    "AIR", # Airflow                       https://docs.astral.sh/ruff/rules/#airflow-air
    # "ERA", # eradicate                     https://docs.astral.sh/ruff/rules/#eradicate-era
    "FAST", # fastapi                       https://docs.astral.sh/ruff/rules/#fastapi-fast
    "YTT",  # flake8-2020                   https://docs.astral.sh/ruff/rules/#flake8-2020-ytt
    # "ANN", # flake8-annotations            https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
    "ASYNC", # flake8-async                  https://docs.astral.sh/ruff/rules/#flake8-async-async
    "S",     # flake8-bandit                 https://docs.astral.sh/ruff/rules/#flake8-bandit-s
    # "BLE", # flake8-blind-except           https://docs.astral.sh/ruff/rules/#flake8-blind-except-ble
    # "FBT", # flake8-boolean-trap           https://docs.astral.sh/ruff/rules/#flake8-boolean-trap-fbt
    "B",   # flake8-bugbear                https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "A",   # flake8-builtins               https://docs.astral.sh/ruff/rules/#flake8-builtins-a
    "COM", # flake8-commas                 https://docs.astral.sh/ruff/rules/#flake8-commas-com
    "C4",  # flake8-comprehensions         https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    # "CPY", # flake8-copyright              https://docs.astral.sh/ruff/rules/#flake8-copyright-cpy
    "DTZ", # flake8-datetimez              https://docs.astral.sh/ruff/rules/#flake8-datetimez-dtz
    "T10", # flake8-debugger               https://docs.astral.sh/ruff/rules/#flake8-debugger-t10
    # "DJ",  # flake8-django                 https://docs.astral.sh/ruff/rules/#flake8-django-dj
    # "EM",  # flake8-errmsg                 https://docs.astral.sh/ruff/rules/#flake8-errmsg-em
    "EXE", # flake8-executable             https://docs.astral.sh/ruff/rules/#flake8-executable-exe
    # "FIX", # flake8-fixme                  https://docs.astral.sh/ruff/rules/#flake8-fixme-fix
    "FA",   # flake8-future-annotations     https://docs.astral.sh/ruff/rules/#flake8-future-annotations-fa
    "INT",  # flake8-gettext-int            https://docs.astral.sh/ruff/rules/#flake8-gettext-int
    "ISC",  # flake8-implicit-str-concat    https://docs.astral.sh/ruff/rules/#flake8-implicit-str-concat-isc
    "ICN",  # flake8-import-conventions     https://docs.astral.sh/ruff/rules/#flake8-import-conventions-icn
    "LOG",  # flake8-logging                https://docs.astral.sh/ruff/rules/#flake8-logging-log
    "G",    # flake8-logging-format         https://docs.astral.sh/ruff/rules/#flake8-logging-format-g
    "INP",  # flake8-no-pep420              https://docs.astral.sh/ruff/rules/#flake8-no-pep420-inp
    "PIE",  # flake8-pie                    https://docs.astral.sh/ruff/rules/#flake8-pie-pie
    "T20",  # flake8-print                  https://docs.astral.sh/ruff/rules/#flake8-print-t20
    "PYI",  # flake8-pyi                    https://docs.astral.sh/ruff/rules/#flake8-pyi-pyi
    "PT",   # flake8-pytest-style           https://docs.astral.sh/ruff/rules/#flake8-pytest-style-pt
    "Q",    # flake8-quotes                 https://docs.astral.sh/ruff/rules/#flake8-quotes-q
    "RSE",  # flake8-raise                  https://docs.astral.sh/ruff/rules/#flake8-raise-rse
    "RET",  # flake8-return                 https://docs.astral.sh/ruff/rules/#flake8-return-ret
    "SLF",  # flake8-self                   https://docs.astral.sh/ruff/rules/#flake8-self-slf
    "SIM",  # flake8-simplify               https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "SLOT", # flake8-slots                  https://docs.astral.sh/ruff/rules/#flake8-slots-slot
    "TID",  # flake8-tidy-imports           https://docs.astral.sh/ruff/rules/#flake8-tidy-imports-tid
    "TD",   # flake8-todos                  https://docs.astral.sh/ruff/rules/#flake8-todos-td
    "TC",   # flake8-type-checking          https://docs.astral.sh/ruff/rules/#flake8-type-checking-tc
    "ARG",  # flake8-unused-arguments       https://docs.astral.sh/ruff/rules/#flake8-unused-arguments-arg
    # "PTH", # flake8-use-pathlib            https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
    # "FLY", # flynt                         https://docs.astral.sh/ruff/rules/#flynt-fly
    "I",   # isort                         https://docs.astral.sh/ruff/rules/#isort-i
    "C90", # mccabe                        https://docs.astral.sh/ruff/rules/#mccabe-c90
    # "NPY", # numpy                         https://docs.astral.sh/ruff/rules/#numpy-specific-rules-npy
    # "PD",  # pandas-vet                    https://docs.astral.sh/ruff/rules/#pandas-vet-pd
    "N",    # pep8-naming                   https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "PERF", # perflint                      https://docs.astral.sh/ruff/rules/#perflint-perf
    "E",    # pycodestyle - Error           https://docs.astral.sh/ruff/rules/#error-e
    "W",    # pycodestyle - Warning         https://docs.astral.sh/ruff/rules/#warning-w
    # "DOC", # pydoclint                     https://docs.astral.sh/ruff/rules/#pydoclint-doc
    # "D",   # pydocstyle                    https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "F",    # Pyflakes                      https://docs.astral.sh/ruff/rules/#pyflakes-f
    "PGH",  # pygrep-hooks                  https://docs.astral.sh/ruff/rules/#pygrep-hooks-pgh
    "PL",   # Pylint                        https://docs.astral.sh/ruff/rules/#pylint-pl
    "UP",   # pyupgrade                     https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "FURB", # flake8-refurb                 https://docs.astral.sh/ruff/rules/#refurb-furb
    "RUF",  # Ruff-specific rules           https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
    "TRY",  # tryceratops                   https://docs.astral.sh/ruff/rules/#tryceratops-try
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes    = "single"

[tool.ruff.lint.pycodestyle]
max-doc-length                = 160
ignore-overlong-task-comments = true

[tool.ruff.lint.mccabe]
# Cyclomatic complexity: <=10 is the NIST/SEI industry standard
max-complexity = 10

[tool.ruff.lint.pylint]
# Pylint defaults (industry standard)
max-args                = 5
max-positional-args     = 5
max-branches            = 12
max-statements          = 50
max-returns             = 6
max-locals              = 15
max-nested-blocks       = 5
max-public-methods      = 20
max-bool-expr           = 5
allow-magic-value-types = ["int", "str", "bytes"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401", # module-imported-but-unused
    "F403", # undefined-local-with-import-star
]
"tests/**/*.py" = [
    "INP001",  # implicit-namespace-package
    "SLF001",  # private-member-access (fine in tests)
    "S101",    # assert (pytest's entry point)
    "S106",    # hardcoded-password-func-arg (fixtures)
    "PLR0911", # too-many-return-statements
    "PLR0912", # too-many-branches
    "PLR0913", # too-many-arguments (parametrized fixtures)
    "PLR0915", # too-many-statements
    "C901",    # complex-structure
]
"**/test_*.py" = [
    "INP001",
    "SLF001",
    "S101",
    "S106",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "C901",
]
"**/*_test.py" = [
    "INP001",
    "SLF001",
    "S101",
    "S106",
    "PLR0911",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "C901",
]
"**/scripts/*" = [
    "INP001", # implicit-namespace-package (scripts without __init__.py)
    "T20",    # print is fine in CLI scripts
]
"**/migrations/*" = [
    "INP001", # Alembic is a set of scripts
    "S608",   # SQL migrations
]

# ============================================================================
# MYPY (static type checker)
# https://mypy.readthedocs.io/
# ============================================================================

[tool.mypy]
python_version     = "3.13"
files              = ["app", "tests"]
namespace_packages = true
pretty             = true
show_error_codes   = true
# Strict mode (equivalent to `mypy --strict`, adjustable per-case below)
disallow_untyped_defs       = true
disallow_untyped_calls      = true
disallow_untyped_decorators = true
disallow_incomplete_defs    = true
no_implicit_optional        = true
strict_equality             = true
warn_unreachable            = true
warn_redundant_casts        = true
warn_unused_ignores         = true
warn_unused_configs         = true
warn_return_any             = true
# `exclude` is a regex — patterns must be anchored to avoid false matches
exclude = [
    "^\\.venv/",
    "^\\.git/",
    "^\\.tox/",
    "^build/",
    "^dist/",
    "^docs/",
    "^node_modules/",
    "/__pycache__/",
    "^setup\\.py$",
]

# Tests: relax a bit (untyped fixtures, parametrize, etc.)
[[tool.mypy.overrides]]
module                = "tests.*"
disallow_untyped_defs = false

# ============================================================================
# PYTEST
# https://docs.pytest.org/
# ============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests requiring external services",
    "unit: pure unit tests",
    "benchmark: performance benchmarks",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
    "ignore:Module already imported.*:pytest.PytestAssertRewriteWarning",
]

# ============================================================================
# COVERAGE
# https://coverage.readthedocs.io/
# ============================================================================

[tool.coverage.run]
parallel = true
branch   = true
source   = ["app"]
omit     = ["**/*_test.py", "**/test_*.py", "**/tests/**"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
]

[tool.coverage.html]
directory = "htmlcov"
